Updates to ibcore committed for sub-branch testing